--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -19,6 +19,7 @@ $burgerActiveColor: 'white';
   --main-color: #46474E;
   --white-color: #FFFFFF;
   --bg-color: #3F3F46;
+  --btn-color: #61504D;
 
   --second-color: #F4AD7F;
   --yellow-color: #FBD97E;
