--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,29 +1,35 @@
 @font-face {
   font-family: 'PF DinDisplay Pro';
   src: url('../fonts/PFDinDisplayPro-Thin.woff') format('woff');
+  font-weight: 200;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
   src: url('../fonts/PFDinDisplayPro-Light.woff') format('woff');
+  font-weight: 300;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
   src: url('../fonts/PFDinDisplayPro-Regular.woff') format('woff');
+  font-weight: 400;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
   src: url('../fonts/PFDinDisplayPro-Medium.woff') format('woff');
+  font-weight: 500;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
   src: url('../fonts/PFDinDisplayPro-Bold.woff') format('woff');
+  font-weight: 700;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
   src: url('../fonts/PFDinDisplayPro-Black.woff') format('woff');
+  font-weight: 800;
 }
