--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,9 @@
 @import './global';
 
 // Sections or Pages SCSS-files imports
+@import './base';
 @import './header';
+@import './hero';
 // @import './footer';
 
 // Libs
