--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,8 @@
 @import './base';
 @import './header';
 @import './hero';
+@import './about';
+@import './leaders';
 // @import './footer';
 
 // Libs
