added calculation and services sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,8 @@
 @import './hero';
 @import './about';
 @import './leaders';
+@import './services';
+@import './calculation';
 // @import './footer';
 
 // Libs
