added new sections

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,4 +1,179 @@
-// Footer
-footer {
-    display: block;
+.footer {
+  padding: 120px 0 24px;
+  background: #3F3F46;
+
+
+  @media (max-width: $breakpoint992) {
+    padding: 60px 0 24px;
+  }
+
+  // .footer__inner
+
+  &__inner {}
+
+  // .footer__top
+
+  &__top {
+    padding-bottom: 90px;
+  }
+
+  // .footer__lists
+
+  &__lists {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    column-gap: 40px;
+    margin-bottom: 50px;
+
+    @media (max-width: $breakpoint992) {
+      flex-direction: column;
+      row-gap: 40px;
+    }
+  }
+
+  // .footer__list
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+
+    &:nth-child(2) {
+      max-width: 250px;
+    }
+  }
+
+  // .footer__item
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // .footer__item-phone
+
+  &__item-phone {
+    font-size: 40px;
+    line-height: 100%;
+    color: var(--second-color);
+
+    @media (max-width: $breakpoint480) {
+      font-size: 30px;
+    }
+  }
+
+  // .footer__item-mail
+
+  &__item-mail {
+    color: #B2B2B5;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 160%;
+  }
+
+  // .footer__item-title
+
+  &__item-title {
+    font-size: 20px;
+    line-height: 160%;
+    color: var(--white-color);
+  }
+
+  // .footer__item-name
+
+  &__item-name {
+    color: #B2B2B5;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 160%;
+  }
+
+  // .footer__item-label
+
+  &__item-label {
+    line-height: 160%;
+    color: var(--white-color);
+  }
+
+  // .footer__item-text
+
+  &__item-text {
+    font-size: 14px;
+    line-height: 160%;
+    font-weight: 400;
+    color: #B2B2B5;
+  }
+
+  // .footer__socials
+
+  &__socials {}
+
+  // .footer__socials-title
+
+  &__socials-title {
+    max-width: 480px;
+    margin-bottom: 20px;
+    font-weight: 300;
+    line-height: 100%;
+    font-size: 36px;
+    color: var(--white-color);
+
+    @media (max-width: $breakpoint480) {
+      font-size: 28px;
+    }
+  }
+
+  // .footer__socials-list
+
+  &__socials-list {
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+  }
+
+  // .footer__socials-item
+
+  &__socials-item {}
+
+  // .footer__socials-link
+
+  &__socials-link {}
+
+  // .footer__socials-img
+
+  &__socials-img {}
+
+  // .footer__bottom
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 20px;
+    padding-top: 12px;
+    border-top: 2px solid #52535B;
+
+    @media (max-width: $breakpoint992) {
+      flex-direction: column;
+      row-gap: 20px;
+      text-align: center;
+    }
+  }
+
+  // .footer__bottom-text
+
+  &__bottom-text {
+    color: #B2B2B5;
+    font-size: 13px;
+    line-height: 160%;
+  }
+
+  // .footer__bottom-link
+
+  &__bottom-link {
+    color: #B2B2B5;
+    font-size: 13px;
+    line-height: 160%;
+  }
 }
