--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,11 @@
 @import './leaders';
 @import './services';
 @import './calculation';
-// @import './footer';
+@import './subscription-experts';
+@import './cases';
+@import './crm';
+@import './map';
+@import './footer';
 
 // Libs
 // @import './libs/swiper';
