--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -28,6 +28,7 @@ body {
   font-weight: 700;
   line-height: 120%;
   color: var(--main-color);
+  overflow-x: hidden;
 
   &.locked {
     overflow: hidden;
