--- a/src/scss/_leaders.scss
+++ b/src/scss/_leaders.scss
@@ -8,14 +8,22 @@
     align-items: center;
     justify-content: space-between;
     column-gap: 40px;
-    padding: 32px 40px 32px 50px;
+
+    height: 560px;
+    max-height: 560px;
+    min-height: 560px;
+    padding: 32px 32px 32px 50px;
     background-color: var(--white-color);
     border-radius: 6px;
 
-    @media (max-width: $breakpoint992) {
-      flex-direction: column;
-      row-gap: 40px;
+
+    @media (max-width: 1200px) {
+      height: 100%;
+      max-height: 100%;
+      min-height: 0;
     }
+
+    @media (max-width: $breakpoint992) {}
 
     @media (max-width: $breakpoint480) {
       padding: 20px;
@@ -25,16 +33,13 @@
   // .leaders__info
 
   &__info {
-    flex: 0 1 560px;
-
-    @media (max-width: $breakpoint992) {
-      flex: 0 1 auto;
-    }
+    height: 100%;
   }
 
   // .leaders__rows
 
   &__rows {
+    position: relative;
     display: flex;
     flex-direction: column;
   }
@@ -42,22 +47,101 @@
   // .leaders__row
 
   &__row {
-    padding: 22px 32px 22px 0;
+    display: grid;
+    grid-template-columns: 436px 610px;
+    column-gap: 32px;
 
-    &:not(:last-child) {
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(1, 1fr);
+      row-gap: 0;
+    }
+
+
+    &:not(:last-child) .leaders__row-header {
       border-bottom: 1px solid #EAE9E9;
+    }
+
+    @media (max-width: 1200px) {
+      &:not(:last-child).active .leaders__row-header {
+        border: 0;
+      }
+
+      &:not(:last-child) .leaders__row-content {
+        border-bottom: 1px solid #EAE9E9;
+      }
+    }
+
+    &.active {
+      .leaders__row-content {
+        opacity: 1;
+        user-select: auto;
+        pointer-events: visible;
+
+        @media (max-width: 1200px) {
+          max-height: 1000px;
+          overflow: visible;
+          padding-bottom: 20px;
+        }
+      }
+
+      .leaders__row-descr {
+        max-height: 100%;
+        margin-top: 16px;
+        opacity: 0.7;
+      }
+
+      svg {
+        transform: rotate(90deg);
+      }
+
+      svg path:nth-child(2) {
+        fill: #fff;
+      }
+
+      svg {
+        background-color: #F4AD7F;
+        border-radius: 8px;
+      }
+    }
+  }
+
+  &__row-header {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    padding: 22px 32px 22px 0;
+  }
+
+  &__row-content {
+    position: absolute;
+    right: 0;
+    top: 0;
+    flex: 0 0 50%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+    max-width: 610px;
+    opacity: 0;
+    user-select: none;
+    pointer-events: none;
+
+    transition: opacity 0.2s linear, max-height 0.3s linear, overflow 0.2s linear, padding-bottom 0.2s linear;
+
+    @media (max-width: 1200px) {
+      flex: 0 1 auto;
+      justify-self: center;
+      position: static;
+      max-width: 100%;
+      width: 100%;
+      max-height: 0;
+      padding-bottom: 0;
+      overflow: hidden;
     }
   }
 
   // .leaders__row--open
 
-  &__row--open {
-    padding-bottom: 65px;
-
-    .leaders__row-title span svg {
-      display: none;
-    }
-  }
+  &__row--open {}
 
   // .leaders__row-title
 
@@ -78,11 +162,14 @@
   // .leaders__row-descr
 
   &__row-descr {
-    margin-top: 16px;
+    max-height: 0;
+    opacity: 0;
+    margin-top: 0;
     font-size: 15px;
     line-height: 160%;
     font-weight: 400;
-    opacity: 0.7;
+
+    transition: height 0.2s linear, opacity 0.2s linear, margin-top 0.2s linear;
 
     @media (max-width: $breakpoint480) {
       font-size: 14px;
@@ -92,25 +179,101 @@
   // .leaders__pictures
 
   &__pictures {
-    flex: 0 1 auto;
+    max-width: 610px;
     display: flex;
     align-items: center;
     column-gap: 32px;
+
+    iframe {
+      border-radius: 12px;
+
+      @media (max-width: $breakpoint768) {
+        width: 100%;
+        height: 240px;
+      }
+    }
+
+    @media (max-width: 1200px) {
+      max-width: 100%;
+      justify-content: center;
+    }
 
     @media (max-width: $breakpoint480) {
       column-gap: 20px;
     }
   }
 
+  &__pictures-2 {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+
+    @media (max-width: 1200px) {
+      max-width: 100%;
+      justify-content: center;
+    }
+
+    @media (max-width: $breakpoint768) {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-items: center;
+      row-gap: 16px;
+    }
+
+    .leaders__pictures-all {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: auto;
+      height: 44px;
+      padding: 0 32px;
+      border-radius: 6px;
+      border: 1.5px solid #D7D7D7;
+      font-weight: 700;
+      white-space: nowrap;
+      line-height: 100%;
+      letter-spacing: 0.84px;
+      text-transform: uppercase;
+      font-size: 12px;
+      color: #46474E;
+
+      transition: background-color 0.2s linear, border-color 0.2s linear;
+
+      &:hover {
+        background-color: #FCCD82;
+        border-color: #FCCD82;
+      }
+
+      @media (max-width: 1200px) {
+        margin-left: 40px;
+      }
+
+      @media (max-width: $breakpoint768) {
+        grid-column: span 3;
+        margin-left: 0;
+      }
+    }
+
+    & .leaders__pictures-all--center {
+      margin: 0 auto;
+
+      @media (max-width: 1200px) {
+        margin: 0 auto;
+      }
+    }
+  }
+
   // .leaders__pic
 
   &__pic {
-    max-width: 244px;
+    max-width: 100%;
     width: auto;
     border-radius: 10px;
+    // object-fit: contain;
 
     @media (max-width: $breakpoint768) {
       max-width: 47%;
+      object-fit: contain;
     }
   }
 }
