--- a/src/scss/_sublists.scss
+++ b/src/scss/_sublists.scss
@@ -2,24 +2,33 @@
   background-color: #fff;
 
   & .sublists {
-    top: 60px;
-    transform: scale(1);
+    // top: 60px;
+    max-height: 3000px;
+    overflow: visible;
+    padding-bottom: 20px;
+    opacity: 1;
+    user-select: auto;
+    pointer-events: visible;
   }
+
 }
 
 .sublists {
   position: absolute;
-  top: 0;
+  top: 60px;
   max-width: 1190px;
   width: 100%;
   margin: 0 auto;
   display: grid;
   grid-auto-flow: column;
-  padding-bottom: 20px;
+  padding-bottom: 0;
   border-top: 1px solid #EAE9E9;
-  transform: scale(0);
+  max-height: 0;
+  opacity: 0;
+  user-select: none;
+  pointer-events: none;
 
-  transition: transform 0.3s linear;
+  transition: max-height 1.5s linear 0s, padding-bottom 0.3s linear, opacity .5s linear;
 
   &::before {
     content: '';
@@ -30,6 +39,10 @@
     height: 100%;
     background-color: #fff;
     z-index: -1;
+  }
+
+  @media (max-width: 1200px) {
+    display: none;
   }
 }
 
