--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,8 @@
 @import './map';
 @import './steps';
 @import './sublists';
+@import './cases-page';
+@import './best-projects';
 @import './footer';
 
 // Libs
