--- a/src/scss/_sublists.scss
+++ b/src/scss/_sublists.scss
@@ -11,6 +11,12 @@
     pointer-events: visible;
   }
 
+  & .sublist {
+    transform: translateX(0);
+    opacity: 1;
+    border-top: 1px solid #EAE9E9;
+  }
+
 }
 
 .sublists {
@@ -22,18 +28,17 @@
   display: grid;
   grid-auto-flow: column;
   padding-bottom: 0;
-  border-top: 1px solid #EAE9E9;
+  border-top: 1px solid transparent;
   max-height: 0;
-  opacity: 0;
   user-select: none;
   pointer-events: none;
 
-  transition: max-height 1.5s linear 0s, padding-bottom 0.3s linear, opacity .5s linear;
+  transition: max-height 1s linear, padding-bottom 0.6s linear 0.2s;
 
   &::before {
     content: '';
     position: absolute;
-    top: 0;
+    top: -2px;
     left: -500%;
     width: 1000%;
     height: 100%;
@@ -51,6 +56,10 @@
   align-content: space-between;
   padding-right: 50px;
   padding-top: 30px;
+  transform: translateX(-50px);
+  opacity: 0;
+
+  transition: transform 0.6s linear 0.2s, opacity 0.6s linear 0.2s;
 
   &:not(:first-child) {
     padding-left: 50px;
