added new page and new fonts

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,35 +1,35 @@
 @font-face {
   font-family: 'PF DinDisplay Pro';
-  src: url('../fonts/PFDinDisplayPro-Thin.woff') format('woff');
+  src: url('../fonts/PFDinDisplayPro-Thin.ttf');
   font-weight: 200;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
-  src: url('../fonts/PFDinDisplayPro-Light.woff') format('woff');
+  src: url('../fonts/PFDinDisplayPro-Light.ttf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
-  src: url('../fonts/PFDinDisplayPro-Regular.woff') format('woff');
+  src: url('../fonts/PFDinDisplayPro-Regular.ttf');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
-  src: url('../fonts/PFDinDisplayPro-Medium.woff') format('woff');
+  src: url('../fonts/PFDinDisplayPro-Medium.ttf');
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
-  src: url('../fonts/PFDinDisplayPro-Bold.woff') format('woff');
+  src: url('../fonts/PFDinDisplayPro-Bold.ttf');
   font-weight: 700;
 }
 
 @font-face {
   font-family: 'PF DinDisplay Pro';
-  src: url('../fonts/PFDinDisplayPro-Black.woff') format('woff');
+  src: url('../fonts/PFDinDisplayPro-Black.ttf');
   font-weight: 800;
 }
