--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,8 @@
 @import './steps';
 @import './sublists';
 @import './integrated';
+@import './settings';
+@import './individual-development';
 @import './cases-general';
 @import './cases-page';
 @import './best-projects';
