--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import './cases-general';
 @import './cases-page';
 @import './best-projects';
+@import './education';
 @import './footer';
 
 // Libs
