--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import './map';
 @import './steps';
 @import './sublists';
+@import './contacts';
 @import './integrated';
 @import './settings';
 @import './individual-development';
