--- a/src/scss/_cases.scss
+++ b/src/scss/_cases.scss
@@ -1,5 +1,5 @@
 .cases {
-  padding: 120px 15px 60px;
+  padding: 100px 15px 64px;
   background-color: var(--main-color);
 
   @media (max-width: $breakpoint992) {
@@ -17,6 +17,7 @@
     text-align: center;
     font-size: 36px;
     font-weight: 700;
+    line-height: normal;
     color: var(--white-color);
 
     @media (max-width: $breakpoint768) {
@@ -30,8 +31,8 @@
 
   &__slider-container {
     position: relative;
-    max-width: 1340px;
-    padding: 0 70px;
+    max-width: 1200px;
+    padding: 0 10px;
     margin: 0 auto;
 
     @media (max-width: $breakpoint768) {
@@ -54,6 +55,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    z-index: 2;
   }
 
   // .cases__slider-prev
@@ -161,7 +163,7 @@
   // .cases__slide-title
 
   &__slide-title {
-    padding: 50px 56px 0;
+    padding: 20px 56px 0;
     margin-bottom: 12px;
     font-size: 24px;
     font-weight: 500;
@@ -182,7 +184,7 @@
   &__slide-descr {
     padding: 0 56px 0;
     margin-bottom: 24px;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 15px;
     line-height: 160%;
     color: var(--white-color);
