--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -1,5 +1,5 @@
 .services {
-  padding: 110px 0 80px;
+  padding: 110px 0 192px;
   background-color: var(--grey-color-2);
 
   @media (max-width: $breakpoint992) {
@@ -13,7 +13,7 @@
   // .services__header
 
   &__header {
-    margin-bottom: 80px;
+    margin-bottom: 64px;
     text-align: center;
   }
 
@@ -28,6 +28,9 @@
   &__descr {
     max-width: 760px;
     margin: 0 auto;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 160%;
   }
 
   // .services__list
@@ -35,8 +38,8 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 6px;
-    row-gap: 6px;
+    column-gap: 16px;
+    row-gap: 16px;
 
     @media (max-width: $breakpoint992) {
       grid-template-columns: repeat(2, 1fr);
@@ -52,7 +55,7 @@
 
   &__item {
     display: grid;
-    padding: 52px;
+    padding: 48px 56px;
     background-color: var(--white-color);
     border-radius: 6px;
 
@@ -95,10 +98,10 @@
   // .services__item-title
 
   &__item-title {
-    margin-bottom: 36px;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 140%;
+    margin-bottom: 20px;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 120%;
 
     @media (max-width: $breakpoint768) {
       margin-bottom: 20px;
@@ -109,7 +112,7 @@
   // .services__item-descr
 
   &__item-descr {
-    margin-bottom: 60px;
+    margin-bottom: 36px;
     font-weight: 400;
     font-size: 15px;
     line-height: 160%;
@@ -127,7 +130,7 @@
     display: flex;
     align-items: center;
     column-gap: 30px;
-    margin-bottom: 36px;
+    margin-bottom: 38px;
   }
 
   // .services__price-column
@@ -137,12 +140,13 @@
   // .services__price-img
 
   &__price-img {
-    margin-bottom: 10px;
+    margin-bottom: 14px;
   }
 
   // .services__price-label
 
   &__price-label {
+    font-weight: 700;
     font-size: 15px;
     line-height: 140%;
   }
