--- a/src/scss/_calculation.scss
+++ b/src/scss/_calculation.scss
@@ -1,6 +1,6 @@
 .calculation {
   position: relative;
-  padding: 210px 0;
+  padding: 192px 0;
   background-image: url('../img/calculation/calculation-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
@@ -90,7 +90,7 @@
   // .calculation__title
 
   &__title {
-    margin-bottom: 56px;
+    margin-bottom: 48px;
     font-weight: 500;
     font-size: 64px;
     line-height: 100%;
@@ -108,7 +108,7 @@
   &__label {
     text-align: center;
     font-weight: 300;
-    font-size: 36px;
+    font-size: 32px;
     line-height: 100%;
     color: var(--white-color);
 
@@ -122,7 +122,7 @@
   &__instruction {
     display: flex;
     flex-direction: column;
-    padding: 92px 64px 52px;
+    padding: 90px 64px 52px;
     background-color: var(--white-color);
     border-radius: 8px;
     text-align: center;
@@ -150,12 +150,12 @@
 
   &__instruction-input {
     height: 72px;
-    width: 100%;
+    width: 356px;
     padding: 0 20px;
     margin-bottom: 16px;
     background-color: var(--grey-color-2);
     outline: 0;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 160%;
     font-size: 20px;
     color: var(--main-btn);
@@ -165,7 +165,7 @@
     &::placeholder {
       text-align: center;
       font-family: 'PF DinDisplay Pro', sans-serif;
-      font-weight: 500;
+      font-weight: 400;
       line-height: 160%;
       font-size: 20px;
       color: var(--main-btn);
@@ -173,6 +173,7 @@
 
     @media (max-width: $breakpoint768) {
       height: 60px;
+      width: 100%;
       font-size: 18px;
 
       &::placeholder {
@@ -188,9 +189,10 @@
     width: 100%;
     margin-bottom: 12px;
     text-transform: uppercase;
-    font-size: 15px;
-    line-height: 140%;
-    letter-spacing: 0.75;
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 1.19px;
 
     @media (max-width: $breakpoint768) {
       font-size: 14px;
@@ -201,12 +203,13 @@
   // .calculation__instruction-agreement
 
   &__instruction-agreement {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 11px;
     line-height: 140%;
     color: var(--btn-color);
 
     a {
+      font-weight: 500;
       color: var(--second-color);
     }
   }
