--- a/src/scss/_crm.scss
+++ b/src/scss/_crm.scss
@@ -1,6 +1,6 @@
 .tabs {
   width: 100%;
-  margin-bottom: 90px;
+  margin-bottom: 36px;
 
   @media (max-width: $breakpoint992) {
     margin-bottom: 40px;
@@ -18,12 +18,13 @@
     }
 
     &-item {
-      padding: 24px 32px;
+      padding: 22px 32px;
       border-radius: 6px;
       background-color: #52535B;
       white-space: nowrap;
-      font-size: 20px;
+      font-size: 17px;
       font-weight: 500;
+      line-height: 100%;
       color: var(--white-color);
       cursor: pointer;
 
@@ -39,7 +40,7 @@
   }
 
   &__content {
-    margin-top: 50px;
+    margin-top: 64px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,7 +49,7 @@
 }
 
 .crm {
-  padding: 110px 0 90px;
+  padding: 100px 0 64px;
   background-color: var(--main-color);
 
   @media (max-width: $breakpoint992) {
@@ -63,7 +64,7 @@
 
   &__header {
     max-width: 760px;
-    margin: 0 auto 80px;
+    margin: 0 auto 64px;
     text-align: center;
 
     @media (max-width: $breakpoint992) {
@@ -77,7 +78,7 @@
     max-width: 430px;
     margin: 0 auto 32px;
     font-size: 36px;
-    line-height: 120%;
+    line-height: normal;
     color: var(--white-color);
 
     @media (max-width: $breakpoint768) {
@@ -161,7 +162,7 @@
   // .crm__footer
 
   &__footer {
-    padding-top: 25px;
+    padding-top: 30px;
     border-top: 1px solid rgba(127, 127, 132, 0.6);
   }
 
@@ -172,6 +173,7 @@
     margin: 0 auto;
     text-align: center;
     font-size: 14px;
+    font-weight: 400;
     line-height: 160%;
     color: var(--white-color);
 
