--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -36,7 +36,7 @@
   // .hero__title
 
   &__title {
-    margin-bottom: 26px;
+    margin-bottom: 16px;
     font-weight: 800;
     line-height: 140%;
     font-size: 48px;
@@ -44,7 +44,7 @@
 
     span {
       display: block;
-      font-weight: 500;
+      font-weight: 400;
       font-size: 44px;
       color: var(--main-color);
     }
@@ -70,14 +70,14 @@
 
   &__subtitle {
     max-width: 382px;
-    margin-bottom: 60px;
+    margin-bottom: 54px;
     color: var(--second-color);
-    font-size: 24px;
+    font-size: 23px;
     font-weight: 700;
     line-height: 120%;
 
     span {
-      font-weight: 500;
+      font-weight: 400;
       color: var(--main-color);
     }
 
@@ -98,7 +98,7 @@
   &__links {
     display: flex;
     align-items: center;
-    column-gap: 24px;
+    column-gap: 16px;
 
     @media (max-width: $breakpoint1450) {
       column-gap: 16px;
@@ -119,8 +119,25 @@
 
   &__link {
 
+    &.secondary-btn {
+      width: fit-content;
+      padding: 0 32px;
+      background-color: transparent;
+      border: 1.5px solid #D7D7D7;
+
+      &:hover {
+        border-color: transparent;
+        background-color: var(--second-color);
+        color: var(--white-color);
+      }
+    }
+
     @media (max-width: $breakpoint480) {
       width: 100%;
+
+      &.secondary-btn {
+        width: 100%;
+      }
     }
   }
 
@@ -141,6 +158,7 @@
   // .hero__owner-pic
 
   &__owner-pic {
+    width: 118%;
 
     @media (max-width: $breakpoint1450) {
       width: 600px;
@@ -157,7 +175,7 @@
   &__owner-talk {
     position: absolute;
     bottom: 46px;
-    right: 46px;
+    right: -10px;
     padding: 24px 32px;
     background-color: var(--white-color);
     border-radius: 12px;
