--- a/src/scss/_crm.scss
+++ b/src/scss/_crm.scss
@@ -1,10 +1,10 @@
 .tabs {
   width: 100%;
-  margin-bottom: 36px;
+  // margin-bottom: 36px;
 
-  @media (max-width: $breakpoint992) {
-    margin-bottom: 40px;
-  }
+  // @media (max-width: $breakpoint992) {
+  //   margin-bottom: 40px;
+  // }
 
   &__header {
     display: flex;
@@ -198,6 +198,10 @@
   // .tabs__content-item
 
   &__content-item {
+    display: flex;
+    flex-direction: column;
+    row-gap: 36px;
+
     @media (max-width: $breakpoint768) {
       display: flex;
       flex-direction: column-reverse;
