added new page portal-setup

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,7 @@
 @import './cases-page';
 @import './best-projects';
 @import './education';
+@import './portal-setup';
 @import './footer';
 
 // Libs
