--- a/src/scss/_tariffs.scss
+++ b/src/scss/_tariffs.scss
@@ -164,6 +164,7 @@
   // .tariffs__prices-list
 
   &__prices-list {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 16px;
@@ -701,7 +702,7 @@
   display: flex;
   align-items: center;
   column-gap: 12px;
-  width: fit-content;
+  // width: fit-content;
   padding: 0 10px;
   margin: 0 -10px;
   font-weight: 400;
@@ -712,9 +713,23 @@
   cursor: pointer;
 
   &:hover {
-    background-color: var(--yellow-color-2);
-    border-radius: 12px;
+    // background-color: var(--yellow-color-2);
+    // border-radius: 12px;
+
+
+    &::before {
+      content: '';
+      position: absolute;
+      // top: 0;
+      left: 2px;
+      width: calc(100% - 4px);
+      height: 34px;
+      border-radius: 6px;
+      border: 2px solid #FFA469;
+    }
   }
+
+
 }
 
 
