--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,7 @@
 @import './audit';
 @import './tariffs';
 @import './technical-task';
+@import './new-integrated';
 @import './footer';
 
 // Libs
