--- a/src/scss/_integrated.scss
+++ b/src/scss/_integrated.scss
@@ -149,6 +149,14 @@
       border-radius: 12px;
     }
 
+    img {
+      @media (max-width: $breakpoint992) {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+      }
+    }
+
 
     @media (max-width: $breakpoint1450) {
       position: static;
