--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,8 @@
 @import './bi';
 @import './vacancies';
 @import './vacancy';
+@import './quality';
+@import './404';
 @import './footer';
 
 // Libs
