--- a/src/scss/_bi.scss
+++ b/src/scss/_bi.scss
@@ -101,6 +101,7 @@
     margin-bottom: 32px;
     font-size: 32px;
     font-weight: 700;
+    line-height: normal;
 
     @media (max-width: $breakpoint992) {
       margin-bottom: 20px;
@@ -464,5 +465,17 @@
       max-width: 100%;
       width: 100%;
     }
+  }
+}
+
+.bi__analitics-title span {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 400;
+
+  @media (max-width: $breakpoint992) {
+    margin-bottom: 14px;
+    font-size: 18px;
   }
 }
