--- a/src/scss/_cases.scss
+++ b/src/scss/_cases.scss
@@ -154,6 +154,8 @@
     width: 100%;
     height: 200px;
     object-fit: fill;
+    border-radius: 12px;
+    cursor: pointer;
 
     @media (max-width: $breakpoint480) {
       height: 150px;
