--- a/src/scss/_cases.scss
+++ b/src/scss/_cases.scss
@@ -153,7 +153,7 @@
     max-width: 100%;
     width: 100%;
     height: 200px;
-    object-fit: fill;
+    object-fit: cover;
     border-radius: 12px;
     cursor: pointer;
 
