--- a/src/scss/_subscription-experts.scss
+++ b/src/scss/_subscription-experts.scss
@@ -84,6 +84,13 @@
     max-width: 360px;
     height: 200px;
 
+    img {
+      max-width: 100%;
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+
     iframe {
       width: 100%;
       height: 100%;
