--- a/src/scss/_leaders.scss
+++ b/src/scss/_leaders.scss
@@ -187,6 +187,11 @@
     align-items: center;
     column-gap: 16px;
 
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
     iframe {
       border-radius: 12px;
 
@@ -274,9 +279,17 @@
     border-radius: 10px;
     // object-fit: contain;
 
-    @media (max-width: $breakpoint768) {
-      max-width: 47%;
-      object-fit: contain;
-    }
+
+  }
+}
+
+.leaders__row-header {
+  cursor: pointer;
+}
+
+img.leaders__pic {
+  @media (max-width: $breakpoint768) {
+    max-width: 47%;
+    object-fit: contain;
   }
 }
