--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -166,6 +166,7 @@
     text-transform: uppercase;
     font-size: 12px;
     letter-spacing: 1.2px;
+    line-height: 12px;
   }
 
   // .services__more-arrow
